--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,7 @@ main {
   .cartLogo,
   .burgerMenu {
     position: fixed;
-    z-index: 1000;
+    z-index: 1;
     top: 1rem;
     right: 1rem;
     background-color: $pr-brown;
